# CHM

./: .editorconfig  .env  .env.default  .env.empty  .gitignore  .lefthook.yml  Cargo.toml  README.md  ReadMe.md  chm-init.sh  config.json  justfile  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
agent/: Cargo.toml
agent/src/: main.rs
apps/agent/: Cargo.toml
apps/agent/src/: cron_manager.rs  dashboard.rs  file_manager.rs  firewall.rs  lib.rs  log.rs  main.rs  network_config.rs  pc_manager.rs  process_manager.rs  servers.rs  service.rs  software_package.rs
apps/api/: Cargo.toml
apps/api/src/: auth.rs  config.rs  globals.rs  json_schemas.rs  lib.rs  main.rs  openapi.rs
apps/ca/: Cargo.toml  build.rs
apps/ca/.sqlx/: query-08d9301f18fd8fd319de3ac9df1d864e1309bd2d392076f57b952852aebd1c6d.json  query-246393820cddc6d7334537a508673a176de7c6f2c8772e41ff668a00fe202461.json  query-2c70e61abba78caef59cb1cb63d8f70f62ea56fb5457d88e4285fb209112b2e8.json  query-33a2ca36d1198c26b36ddfb9d59c01280b3e74e949c109338b0f36a41cb03c7c.json  query-36fba066433d6f45c0ffc718a1e8e4b3631194842de567730440ad8bc2da37d2.json  query-4062568afd43755b8f42122d874c01d291e6e390c006134da2a9e34322c9467c.json  query-5b177b984ff7fd3ebb69943afc43af0026f5ed20f4adc131fc3ee18a5b019304.json  query-72748d8e4525c51cf031346afa05f1dd1f5d5d3c4cf6914d05918ed1e5994a10.json  query-73ee85680d3fe55274768d2950d34048039aa29a17e24397d5e0fb85977ee922.json  query-8da8879a83a5ec4072fd4a5c49e71bba0245d73df62b9c440e7060514558f648.json  query-8e83e8144cfebe48829c752d43e858583f42c10ee4a5ff3fb406db9e7080e371.json  query-a03da1370918a28237b57c036242155c369b4372fc3508b35b5f45f61ef09512.json  query-b67992a44fc53f5c09341e40db9b5f1ec48288d04d9aca2636b79ea09095e0a0.json  query-c0570433e857cd5fa2b1232b9f651630b0e65b495e3a40d8fb7da0cf7c79cb80.json  query-dfb3126ee4d18ea2ce08d2c0c4327f08fb0649f977e6ea13207f16c1a45d6049.json  query-e18ab2b2ace077543b8c70dec03d4e6e7599a795400e62782ac1957746224a82.json
apps/ca/migrations/: 20250614093602_init_scheme.down.sql  20250614093602_init_scheme.up.sql
apps/ca/proto/: ca.proto
apps/ca/src/: config.rs  connection.rs  functions.rs  globals.rs  grpc.rs  lib.rs  main.rs  mini_controller.rs
apps/controller/: Cargo.toml
apps/controller/src/: config.rs  first.rs  globals.rs  lib.rs  main.rs  restful.rs  run.rs  supervisor.rs
apps/dhcp/: Cargo.toml  build.rs
apps/dhcp/.sqlx/: query-1293ba1a7ab215e36e723ff2be3021635f5ea0342f32e26301e475c2d55526ad.json  query-1d99b71bbcfb4da493ac3823635cc90540871ff61b5ca4aa48bd72e3148a8d62.json  query-243c5b6a2850ff15d1e6ec9bd0ce6b738bd7b4453c45e71efc256d2aaa6ff70a.json  query-28848b6a7fadedffd42d615d67969af21ef7a01ab1d65158d2232adcc02e97bf.json  query-3b0fc62b1dd5da119b12cd1361eb21ab5b3dadd9af949fe4183ce2b7fa6eabce.json  query-4220a68e75dfb4dab4835b6a679a8fbc126ccf16331c8e9aa63d9a98bb2e0c93.json  query-5025f6ab5eace1c2e5b23a46ec7e39436af0a3c742039c91da58a7b92bcbabee.json  query-5d9851b93b91a779db55db300b5ca633f130f5ebce62967f1b2766d95035776f.json  query-61918e2c236164edf799456af1559969bd5bf4b6ff96315beee0039a9b2f15a4.json  query-643784786149fd6de12e0918dc800e977e1c3614ac9ebab5d767d091e9312beb.json  query-66a2d425cac36e2b54301d3226fa5efd2f4682781d3c560cc919e0f9a4a12779.json  query-6b36fd23d69260a0b6a4d286c6253309532d5aa15e8e6929cb163ff36cb36909.json  query-73c41e618948c38e5b21f29de5ff44a12c2d423a59ed72f7b2bf41a4732fac86.json  query-7867b836a4be411f820bb46515ca3b27e2ed9bdfffdcad1a2e6361dd9ca6e328.json  query-7c0eba1573ad542161ab191708121ae53cd6098cfc218e951dc991a30f98905f.json  query-7f0eb4bb16ae60d6715f932b3399ee36893009ba5a445c8e4f5d686871befad5.json  query-81de69b15610d9a5432b24e24eb9efb0110728ae481f64da7da09c0bacf123aa.json  query-b2e29484fb00dd34909288ee5b1ac78316cd0ee736eee2b9091a4e974b045dd8.json  query-f3081c38bc39f94d192ef417f7298d27e38c8abfe8339d705074c8ef2084b01d.json
apps/dhcp/migrations/: 20250623061238_init.down.sql  20250623061238_init.up.sql
apps/dhcp/proto/: dhcp.proto
apps/dhcp/src/: db.rs  error.rs  lib.rs  main.rs  service.rs
apps/dns/: Cargo.toml  README.md  biuld.rs  build.rs  db.sh
apps/dns/.sqlx/: query-0014c5fae32c098405b22aa4b5f96238ca70a1527d798bf8717ba39898f392be.json  query-0c44c498723ae0918a97ab185805f23b59a325eac196192caea74d330ee3e162.json  query-205213948721479656111dd6fa42b4e3d375e1674172cc627073533e0c6a7143.json  query-33ee06cad8e91ed03d4a70a8408f490a24cf4d2970dc280c1ae779ccdd6ad76f.json  query-5513c69ded3a296edb4265b9a835dce3797955574f7c7454cf7b3d05c09b849f.json  query-560733a70d4b4aaa72c16bb0c4b6db4571172eb88e28c13107e14158de0709d6.json  query-64e08e9f427f7d3b3a4ce0ff5c070b7371c2433010b200c8165958117625c381.json  query-782e114d2199f380b1c07a00a3f0c2c7b3a5ebae3f226c0070d8cb10ffbaf3ad.json  query-8cb4a5d9dd3381f66ebd6a42919deffa9fe544912d0353689e22c89e550176f9.json  query-a7e132dbf8785a8993a8f574657b0a03a7b84a352c688676f946dff48010f139.json  query-ac810ddc24b3c09d9659a92b78d6a216ab656445b55616fa920fd4a702a9dba9.json  query-b08fde0ce7ed6200536c8912ccca1d7830d738b830dc0617c8c158d30d6bb525.json  query-e6adb788bf0cb62e7c8b59a802b98e7a8c70e3cacec38f97b48808da6c99c26c.json  query-e915af58ba8d23c54cba5e5f2322156b515370c8907546850196ec9060ec4dc0.json
apps/dns/migrations/: 20250707040959_init_scheme.down.sql  20250707040959_init_scheme.up.sql
apps/dns/proto/: dns.proto
apps/dns/src/: db.rs  error.rs  lib.rs  main.rs  service.rs
apps/ldap/: Cargo.toml  README.md  build.rs
apps/ldap/.sqlx/: query-0dcd48266dc8fb1a06fc256ef0b491d87f75919c031bdcd3c40d533094696d1e.json  query-721cefa181886404cd229ade96b3c5d1d92916e3420744d44ccb28c47fe0f5c4.json  query-774825491f48930e240d9a3a949494f3db9ab94dc6456307d8bae8259084c0d6.json
apps/ldap/ldif/: 1.ldif  2.ldif  3.ldif  4.ldif  add_tls.ldif  init.ldif
apps/ldap/migrations/: 20251012074555_init_scheme.down.sql  20251012074555_init_scheme.up.sql
libs/cert-utils/: Cargo.toml
libs/chm-firewall/: Cargo.toml
libs/cluster-utils/: Cargo.toml
libs/config-bus/: Cargo.toml
libs/config_loader/: Cargo.toml
libs/dns_resolver/: Cargo.toml
libs/grpc/: Cargo.toml  build.rs
(+220 files in other folders)
