[workspace]
members = [
    "apps/ca", "libs/cert-utils",
    "libs/config_loader",
    "libs/crl_cache",
    "libs/grpc",
    "libs/password",
    "xtask",
]
resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
actix-tls = { version = "3.4.0", features = ["openssl"] }
actix-web = { version = "4.11.0", features = ["openssl"] }
chrono = { version = "0.4.41", features = ["serde"] }
config_loader = { version = "0.1.0", path = "./libs/config_loader" }
cert-utils = { version = "0.1.0", path = "./libs/cert-utils" }
crl_cache = { version = "0.1.0", path = "./libs/crl_cache" }
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
grpc = { version = "0.1.0", path = "./libs/grpc" }
humantime = "2.2.0"
humantime-serde = "1.1.1"
once_cell = "1.21.3"
openssl = "0.10.72"
openssl-sys = "0.9.109"
password = { version = "0.1.0", path = "./libs/password" }
reqwest = { version = "0.12.20", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "macros", "chrono", "runtime-tokio","migrate"] }
tokio = { version = "1.43.0", features = ["rt","macros","rt-multi-thread","fs"] }
tonic-async-interceptor = "0.13.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = "abort"
split-debuginfo = "packed"
