[package]
name = "agent"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
prost = "0.13.4"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
grpc = { path = "../libs/grpc", features = ["client"] }

[build-dependencies]
tonic-build = "0.12.3"
