[package]
name = "agent"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "CHM_agentd"
path = "src/main.rs"

[[bin]]
name = "CHM_hostd"
path = "src/hostd/hostd_bin.rs"

[dependencies]
anyhow = "1.0"
argh = { workspace = true }
base64 = { workspace = true }
caps = "0.5"
chm-cert-utils = { workspace = true }
chm-cluster-utils = { workspace = true, features = ["server", "grpc-server"], default-features = true }
chm-config_bus = { workspace = true }
chm-grpc = { workspace = true, features = ["agent-server"] }
chm-project_const = { workspace = true }
chrono = { workspace = true }
pnet = "0.35.0"
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
users = "0.11"
uuid = { workspace = true, features = ["v4"] }
chm-password = { workspace = true }
