[package]
name = "api_server"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "CHM_API"
path = "src/main.rs"

[dependencies]
actix-multipart = { workspace = true }
actix-web = { workspace = true }
chm-config_bus = { workspace = true }
chm-cluster-utils = { workspace = true, features = ["server"], default-features = true }
chm-cert-utils = { workspace = true }
chm-dns_resolver = { workspace = true }
chm-grpc = { workspace = true, features = ["restful-common-client"] }
chm-project_const = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
argh = { workspace = true }
openssl = { workspace = true }
