[package]
name = "api_server"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "CHM_API"
path = "src/main.rs"

[dependencies]
actix-cors = { workspace = true }
actix-multipart = { workspace = true }
actix-session = { workspace = true }
actix-web = { workspace = true }
argh = { workspace = true }
chm-cert-utils = { workspace = true }
chm-cluster-utils = { workspace = true, features = [
  "server",
], default-features = true }
chm-config_bus = { workspace = true }
chm-dns_resolver = { workspace = true }
chm-grpc = { workspace = true, features = ["restful-common-client"] }
chm-password = { workspace = true }
chm-project_const = { workspace = true }
openssl = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = "0.13.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
