[package]
name = "api_server"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "CHM_API"
path = "src/main.rs"

[[bin]]
name = "gen_schema"
path = "src/bin/gen_schema.rs"
required-features = ["schema"]

[features]
schema = []

[dependencies]
actix-cors = { workspace = true }
actix-multipart = { workspace = true }
actix-session = { workspace = true }
actix-web = { workspace = true }
argh = { workspace = true }
chm-cert-utils = { workspace = true }
chm-cluster-utils = { workspace = true, features = [
  "server",
], default-features = true }
chm-config_bus = { workspace = true }
chm-dns_resolver = { workspace = true }
chm-grpc = { workspace = true, features = ["restful-common-client"] }
chm-password = { workspace = true }
chm-project_const = { workspace = true }
openssl = { workspace = true }
reqwest = { workspace = true }
schemars = "1.1.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
utoipa = { version = "5.4.0", features = ["macros", "actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
