[package]
name = "controller"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "CHMcd"
path = "src/main.rs"

[dependencies]
argh = { workspace = true }
backoff = { workspace = true }
chm-cert-utils = { workspace = true }
chm-cluster-utils = { workspace = true, features = ["client", "server"] }
chm-config_bus = { workspace = true }
chm-dns_resolver = { workspace = true }
chm-grpc = { workspace = true, features = ["controller", "ca-client", "restful"] }
chm-project_const = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
