[package]
name = "dns"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "CHM_mDNSd"
path = "src/main.rs"

[dependencies]
chm-dns_resolver = { workspace = true }
chm-grpc = { workspace = true, features = ["dns"] }
prost = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
