[package]
name = "dns"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "CHM_mDNSd"
path = "src/main.rs"

[dependencies]
argh = { workspace = true }
chm-cert-utils = { workspace = true }
chm-cluster-utils = { workspace = true, features = ["server", "grpc-server"], default-features = true }
chm-config_bus = { workspace = true }
chm-dns_resolver = { workspace = true }
chm-grpc = { workspace = true, features = ["dns"] }
chm-project_const = { workspace = true }
http = "1.3.1"
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
