[package]
name = "ldap"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.13.0"
tokio = { version = "1", features = ["full"] }
prost = "0.13.5"
ldap3 = { version = "0.11", default-features = false, features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
rand = { version = "0.8", features = ["std"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.22.1"
thiserror = "2.0.12"

[build-dependencies]
tonic-build = "0.13.0"
