[package]
name = "cert-utils"
version.workspace = true
edition.workspace = true

[dependencies]
openssl = { workspace = true }
openssl-sys = { workspace = true }
config_loader = { workspace = true, default-features = false, features = ["project_dirs"] }
grpc = { workspace = true, features = ["crl-client"] }

