[package]
name = "chm-cert-utils"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
chm-config_loader = { workspace = true }
chm-grpc = { workspace = true, features = ["crl-client"] }
chm-project_const = { workspace = true }
openssl = { workspace = true }
openssl-sys = { workspace = true }

