[package]
name = "chm-cluster-utils"
version.workspace = true
edition.workspace = true
publish = false

[features]
client = ["dep:reqwest"]
server = ["dep:actix-web", "dep:actix-tls"]
openssl = ["dep:openssl", "dep:openssl-sys"]
default = ["openssl", "dep:tokio"]

[dependencies]
actix-tls = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true }
chm-cert-utils = { workspace = true }
chm-grpc = { workspace = true }
chm-dns_resolver = { workspace = true }
chm-password = { workspace = true }
futures = { workspace = true }
openssl = { workspace = true, optional = true }
openssl-sys = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
cached = { workspace = true }
