[package]
name = "config_loader"
version.workspace = true
edition.workspace = true

[dependencies]
config = { version = "0.15.11", default-features = false, features = ["toml"] }
project_const = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.43.0", features = ["fs"] }
toml = "0.8.22"
[dev-dependencies]
tempfile = "3.17.1"
