[package]
name = "chm-config_loader"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
chm-project_const = { workspace = true }
config = { version = "0.15.11", default-features = false, features = ["toml"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
toml = { workspace = true }
[dev-dependencies]
tempfile = "3.17.1"
