[package]
name = "chm-grpc"
version.workspace = true
edition.workspace = true
publish = false
[features]
ca-client = []
ca-server = []
ca = ["ca-client", "ca-server"]
crl-client = []
crl-server = []
crl = ["crl-client", "crl-server"]
controller-client = []
controller-server = []
controller = ["controller-client", "controller-server"]
default = ["crl-client"]
[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
[build-dependencies]
tonic-build = "0.13.1"
