[package]
name = "chm-grpc"
version.workspace = true
edition.workspace = true
publish = false
[features]
ca-client = []
ca-server = []
ca = ["ca-client", "ca-server"]
crl-client = []
crl-server = []
crl = ["crl-client", "crl-server"]
controller-client = []
controller-server = []
controller = ["controller-client", "controller-server"]
dns-client = []
dns-server = []
dns = ["dns-client", "dns-server"]
ldap-client = []
ldap-server = []
ldap = ["ldap-client", "ldap-server"]
dhcp-client = []
dhcp-server = []
dhcp = ["dhcp-client", "dhcp-server"]
agent-client = []
agent-server = []
agent = ["agent-client", "agent-server"]
hostd-client = []
hostd-server = []
hostd = ["hostd-client", "hostd-server"]
restful-server = []
restful-client = []
common-server = []
common-client = []
restful-common-server = ["restful-server", "common-server"]
restful-common-client = ["restful-client", "common-client"]
common = ["common-server", "common-client"]
restful = ["restful-server", "restful-client", "common"]
default = ["crl-client", "dns-client"]
all = [
    "ca",
    "crl",
    "controller",
    "dns",
    "restful",
    "common",
    "ldap",
    "dhcp",
    "hostd",
    "agent",
]
[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = "0.13.1"
